雑多な変更
- post /zigzagを同期APIへ
- taskコマンドのオプションにstaticcheckのサポート
- staticcheckの指摘事項修正
