# FXTesterServer/service/bar_service.go
@@ -1,10 +1,14 @@
 package service
 
 import (
+	"encoding/json"
 	"errors"
+	"fmt"
+	"fxtester/internal/common"
 	"fxtester/internal/db"
 	"fxtester/internal/gen"
 	"fxtester/internal/lang"
+	"fxtester/internal/reader"
 	"fxtester/internal/saml"
 	"fxtester/internal/validator"
 	"fxtester/internal/websock"
@@ -45,56 +49,49 @@ func (b *BarService) Init() error {
 	return nil
 }
 
-// ユーザをシングルサインオンさせるログインリクエストを作成し、FormのPOSTによってidPに送信するスクリプトタグを含んだHTMLを返却するエンドポイント。
+// GetSamlLogin ユーザをシングルサインオンさせるログインリクエストを作成し、FormのPOSTによってidPに送信するスクリプトタグを含んだHTMLを返却するエンドポイント。
 //
 // (GET /saml/login)
 func (b *BarService) GetSamlLogin(ctx echo.Context, params gen.GetSamlLoginParams) error {
 	return b.samlClient.ExecuteSamlLogin(ctx, params)
 }
 
-// IdPから受け取る認証レスポンス（SAMLアサーション）を処理するエンドポイント。
+// PostSamlAcs IdPから受け取る認証レスポンス（SAMLアサーション）を処理するエンドポイント。
 //
 // (POST /saml/acs)
 func (b *BarService) PostSamlAcs(ctx echo.Context) error {
 	return b.samlClient.ExecuteSamlAcs(ctx)
 }
 
-// SAMLログインのエラー詳細を返却するエンドポイント
+// GetSamlError SAMLログインのエラー詳細を返却するエンドポイント
 //
 // (GET /saml/error)
 func (b *BarService) GetSamlError(ctx echo.Context) error {
 	return b.samlClient.ExecuteSamlError(ctx)
 }
 
-// ユーザをログアウトさせるログアウトリクエストを作成し、FormのPOSTによってidPに送信するスクリプトタグを含んだHTMLを返却するエンドポイント。
+// GetSamlLogout ユーザをログアウトさせるログアウトリクエストを作成し、FormのPOSTによってidPに送信するスクリプトタグを含んだHTMLを返却するエンドポイント。
 //
 // (GET /saml/logout)
 func (b *BarService) GetSamlLogout(ctx echo.Context, params gen.GetSamlLogoutParams) error {
 	return b.samlClient.ExecuteSamlLogout(ctx, params)
 }
 
-// IdPから受け取るログアウトリクエストを処理し、ユーザーをログアウトさせるエンドポイント。
+// PostSamlSlo IdPから受け取るログアウトリクエストを処理し、ユーザーをログアウトさせるエンドポイント。
 //
 // (POST /saml/slo)
 func (b *BarService) PostSamlSlo(ctx echo.Context) error {
 	return b.samlClient.ExecuteSamlSlo(ctx)
 }
 
-// Websocketと接続します。
+// GetWsUuid Websocketと接続します。
 //
 // (GET /ws/:uuid)
 func (b *BarService) GetWsUuid(ctx echo.Context) error {
 	return b.websockClient.CommunicateViaWs(ctx)
 }
 
-// Zigzagデータを返却します
-//
-// (GET /zigzag)
-func (w *BarService) GetZigzag(ctx echo.Context, params gen.GetZigzagParams) error {
-	return nil
-}
-
-// CSVまたはローソク足のデータをアップロードし、Zigzagのデータを作成します。
+// PostZigzag CSVまたはローソク足のデータをアップロードし、Zigzagのデータを作成します。
 //
 // (POST /zigzag)
 func (b *BarService) PostZigzag(ctx echo.Context) error {
@@ -112,26 +109,74 @@ func (b *BarService) PostZigzag(ctx echo.Context) error {
 		return err
 	}
 
-	//
+	form := ctx.Request().MultipartForm
+	types := common.NextValue(form.Value["type"])
+	csvInfos := common.NextValue(form.Value["csvInfo"])
+	candless := common.NextValue(form.Value["candles"])
+	csvs := common.NextValue(form.File["csv"])
 
-	// if len(fileTypes) <= 0 {
-	// 	return lang.NewFxtError(lang.ErrCodeParameterMissing, "words.type")
-	// }
+	for {
+		t, err := types()
+		if err != nil {
+			break
+		}
 
-	// if len(fileReaders) <= 0 {
-	// 	return lang.NewFxtError(lang.ErrCodeParameterMissing, "words.file")
-	// }
+		candles, err := func() ([]gen.Candle, error) {
+			var res []gen.Candle
+			switch t {
+			case string(gen.PostZigzagRequestTypeCsv):
+				v, err := csvInfos()
+				if err != nil {
+					// バリデーション済みのため発生しない想定のエラー
+					panic("invalid csvInfo")
+				}
+				var csvInfo gen.CsvInfo
+				if err := json.Unmarshal([]byte(v), &csvInfo); err != nil {
+					// バリデーション済みのため発生しない想定のエラー
+					panic("invalid csvInfo")
+				}
 
-	// if !slices.Contains([]string{string(gen.MT4CSV)}, fileTypes[0]) {
-	// 	return lang.NewFxtError(lang.ErrInvalidParameterError, "words.type")
-	// }
+				csvh, err := csvs()
+				if err != nil {
+					// バリデーション済みのため発生しない想定のエラー
+					panic("invalid csvInfo")
+				}
 
-	// f, err := fileReaders[0].Open()
-	// if err != nil {
-	// 	return lang.NewFxtError(lang.ErrInvalidParameterError, "words.file")
-	// }
+				csvf, err := csvh.Open()
+				if err != nil {
+					return nil, lang.NewFxtError(lang.ErrInvalidParameterError, "csv")
+				}
+				defer csvf.Close()
 
-	return ctx.JSON(http.StatusAccepted, gen.PostZigzagResult{
-		Uuid: "test",
-	})
+				candles, err := reader.ReadCandleCsv(csvInfo, csvf)
+				if err != nil {
+					return nil, lang.NewFxtError(lang.ErrInvalidParameterError, "csv").SetCause(err)
+				}
+
+				fmt.Println(candles)
+
+			case string(gen.PostZigzagRequestTypeCandles):
+				v, err := candless()
+				if err != nil {
+					// バリデーション済みのため発生しない想定のエラー
+					panic("invalid candles")
+				}
+				if err := json.Unmarshal([]byte(v), &res); err != nil {
+					// バリデーション済みのため発生しない想定のエラー
+					panic("invalid candles")
+				}
+			default:
+				// バリデーション済みのため発生しない想定のエラー
+				panic("invalid type " + t)
+			}
+			return res, nil
+		}()
+		if err != nil {
+			return err
+		}
+
+		fmt.Println(candles)
+	}
+
+	return ctx.JSON(http.StatusAccepted, gen.PostZigzagResult{})
 }
